--- a/.github/workflow_scripts/put_folder/Dockerfile
+++ b/.github/workflow_scripts/put_folder/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./test.py .
 
-CMD [ "python", "./test.py" ]
+RUN [ "python", "./test.py" ]
