--- a/.github/workflows/put_empty_files_prt.yml
+++ b/.github/workflows/put_empty_files_prt.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v3
       - run: ls -la
       
-     # - uses: actions/setup-python@v3
-     #   with:
-     #     python-version: '3.6' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-     #     cache: 'pip'
-     #  - run: pip install -r .github/workflow_scripts/put_folder/requirements.txt
-     #  - run: python .github/workflow_scripts/put_folder/put_folder.py
-      - run: python3 .github/workflow_scripts/put_folder/put_folder.py
+     - uses: actions/setup-python@v3
+       with:
+         python-version: '3.6' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+         cache: 'pip'
+      - run: pip install -r .github/workflow_scripts/put_folder/requirements.txt
+      - run: python .github/workflow_scripts/put_folder/put_folder.py
+     # - run: python3 .github/workflow_scripts/put_folder/put_folder.py
       
