--- a/.github/workflows/put_empty_files_prt.yml
+++ b/.github/workflows/put_empty_files_prt.yml
@@ -9,9 +9,9 @@ jobs:
   put-folder:
     runs-on: self-hosted
     env:
-      PACHD_ADDRESS: 'grpcs://pachd1.sandbox.gcp.neoninternal.org:30650'
-      REPO: 'empty_files_test'
-      BRANCH: 'master'
+      PACHD_ADDRESS: grpcs://pachd1.sandbox.gcp.neoninternal.org:30650
+      REPO: empty_files_test
+      BRANCH: master
       IN_PATH: 'empty_files/prt'
       OUT_PATH: '/prt'
     steps:
