point git action at master branch

--- a/.github/workflows/put_avro_schemas_prt.yml
+++ b/.github/workflows/put_avro_schemas_prt.yml
@@ -2,7 +2,7 @@ name: put-avro-schemas-prt
 on:
   push:
     branches:
-      - 'avro.schemas.git.action'
+      - 'master'
     paths:
       - 'avro_schemas/prt/**'
 jobs:
