--- a/.github/workflows/CERT_metone370380_empty_files.yml
+++ b/.github/workflows/CERT_metone370380_empty_files.yml
@@ -15,8 +15,8 @@ jobs:
       PACH_TOKEN: ${{ secrets.RepoOwnerPachydermCert }}
       REPO: metone370380_empty_files # Pachyderm repo
       BRANCH: master 
-      IN_PATHS: 'empty_files/metone370380,empty_files/metone370380_heated' # Comma-separated list (no spaces) to one or more paths or directories. Length must match OUT_PATHS. If directory, all files in directory will be placed in pachyderm at corresponding entry of OUT_PATHS. 
-      OUT_PATHS: '/metone370380,/metone370380_heated' # Comma-separated list (no spaces) of corresponding path(s) to place the files(s) in Pachyderm. Must be same length as IN_PATHS. If corresponding entry in IN_PATHS is a file, specify to the file. If corresponding entry in IN_PATHS is a directory, specify to the directory. 
+      IN_PATHS: 'empty_files/metone370380' # Comma-separated list (no spaces) to one or more paths or directories. Length must match OUT_PATHS. If directory, all files in directory will be placed in pachyderm at corresponding entry of OUT_PATHS. 
+      OUT_PATHS: '/metone370380' # Comma-separated list (no spaces) of corresponding path(s) to place the files(s) in Pachyderm. Must be same length as IN_PATHS. If corresponding entry in IN_PATHS is a file, specify to the file. If corresponding entry in IN_PATHS is a directory, specify to the directory. 
     steps:
       - uses: actions/checkout@v4
       - run: ls -la
