--- a/.github/workflows/DEV_radShortPrimary_avro_schemas.yml
+++ b/.github/workflows/DEV_radShortPrimary_avro_schemas.yml
@@ -1,10 +1,10 @@
-name: DEV-parQuantumLine-avro-schemas
+name: DEV-radShortPrimary-avro-schemas
 on:
   push:
     branches:
       - 'master'
     paths:
-      - 'avro_schemas/parQuantumLine/**'
+      - 'avro_schemas/radShortPrimary/**'
   workflow_dispatch: {} # Allows trigger of workflow from web interface
 jobs:
   put-file:
@@ -13,10 +13,10 @@ jobs:
     env:
       PACHD_ADDRESS: grpcs://pachyderm-dev.transitions-nonprod.gcp.neoninternal.org:443
       PACH_TOKEN: ${{ secrets.RepoOwnerPachydermDev }}
-      REPO: parQuantumLine_avro_schemas # Pachyderm repo
+      REPO: radShortPrimary_avro_schemas # Pachyderm repo
       BRANCH: master 
-      IN_PATHS: 'avro_schemas/parQuantumLine' # Comma-separated list (no spaces) to one or more paths or directories. Length must match OUT_PATHS. If directory, all files in directory will be placed in pachyderm at corresponding entry of OUT_PATHS. 
-      OUT_PATHS: '/parQuantumLine' # Comma-separated list (no spaces) of corresponding path(s) to place the files(s) in Pachyderm. Must be same length as IN_PATHS. If corresponding entry in IN_PATHS is a file, specify to the file. If corresponding entry in IN_PATHS is a directory, specify to the directory. 
+      IN_PATHS: 'avro_schemas/radShortPrimary' # Comma-separated list (no spaces) to one or more paths or directories. Length must match OUT_PATHS. If directory, all files in directory will be placed in pachyderm at corresponding entry of OUT_PATHS. 
+      OUT_PATHS: '/radShortPrimary' # Comma-separated list (no spaces) of corresponding path(s) to place the files(s) in Pachyderm. Must be same length as IN_PATHS. If corresponding entry in IN_PATHS is a file, specify to the file. If corresponding entry in IN_PATHS is a directory, specify to the directory. 
     steps:
       - uses: actions/checkout@v4
       - run: ls -la
