--- a/.github/workflows/DEV_lt400_hu24_empty_files.yml
+++ b/.github/workflows/DEV_lt400_hu24_empty_files.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       PACHD_ADDRESS: grpcs://pachyderm-dev.transitions-nonprod.gcp.neoninternal.org:443
       PACH_TOKEN: ${{ secrets.RepoOwnerPachydermDev }}
-      REPO: troll_empty_files # Pachyderm repo
+      REPO: leveltroll400_hobou24_empty_files # Pachyderm repo
       BRANCH: master 
       IN_PATHS: 'empty_files/leveltroll400,empty_files/hobou24' # Comma-separated list (no spaces) to one or more paths or directories. Length must match OUT_PATHS. If directory, all files in directory will be placed in pachyderm at corresponding entry of OUT_PATHS. 
       OUT_PATHS: '/leveltroll400,/hobou24' # Comma-separated list (no spaces) of corresponding path(s) to place the files(s) in Pachyderm. Must be same length as IN_PATHS. If corresponding entry in IN_PATHS is a file, specify to the file. If corresponding entry in IN_PATHS is a directory, specify to the directory. 
