minor change to reduce confusion in schema. change action to work off of branch.

--- a/.github/workflows/DEV_enviroscan_avro_schemas.yml
+++ b/.github/workflows/DEV_enviroscan_avro_schemas.yml
@@ -2,7 +2,7 @@ name: DEV-enviroscan-avro-schemas
 on:
   push:
     branches:
-      - 'master'
+      - 'enviroscan'
     paths:
       - 'avro_schemas/enviroscan/**'
   workflow_dispatch: {} # Allows trigger of workflow from web interface
